2025-08-02  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix p-search info extension name.

2025-08-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Set foreground of region and
	secondary-selection to unspecified.

2025-08-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-eglot-symbols): Hack highlight for
	`consult-eglot-symbols'.

2025-08-01  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Fix wrong parameter in presets:
	:system-message -> :system.

2025-08-01  Zhengyi Fu  <i@fuzy.me>

	Update key bindings

	* init.el: Bind "C-c s" to `search-map'.
	Bind "C-<mouse-1>" to `embark-dwim'.
	(embark-dwim@mouse): Handle mouse click.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-prefix-map): Bind more commands.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	Update modify-other-keys.el

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): Use angled symbol
	names for special whitespace keys.
	(modify-other-keys--translate-shifted-digits): New function.
	Translate shifted digits in `local-function-key-map'.
	(modify-other-keys--init): Call it.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/treesit-config.el (treesit-language-source-alist): Set
	revisions of c and markdown grammar to the versions of API 14.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (webjump): Add yhetil.org.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/treesit-config.el: New file.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (mode-specific-map): Remove duplicated `toggle-map'
	binding.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add gptel-aibo.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/telega-config.el: Hide telegram buffers from results
	of `consult-buffer'.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	Switch to motion state in `magit-blob-mode'

	* init.el (+meow-maybe-switch-to-motion): New function.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (kimi-coder): Update system message.
