@@ -1,5 +1,10 @@
 2025-08-02  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (+apply-font-setting): Rename arguments.
+	(+custom-fonts-alist, +custom-fontset): Use bolder fonts.
+
+2025-08-02  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el: Fix p-search info extension name.
 
 2025-08-02  Zhengyi Fu  <i@fuzy.me>
